--- a/petljadoc/runestone_ext/blockly-new/index.html
+++ b/petljadoc/runestone_ext/blockly-new/index.html
@@ -11,11 +11,12 @@
         <script type="text/javascript" src="jquery_i18n/jquery.i18n.parser.js"></script>
         <script type="text/javascript" src="jquery_i18n/jquery.i18n.emitter.js"></script>
         <script type="text/javascript" src="jquery_i18n/jquery.i18n.emitter.bidi.js"></script>
+
         <script src="blockly_compressed.js"></script>
         <script src="blocks_compressed.js"></script>
-        <script src="msg/js/en.js"></script>
         <script src="javascript_compressed.js"></script>
         <script src="acorn_interpreter.js"></script>
+        <script src="msg/js/en.js"></script>
         <!-- <script src="msg/js/sr.js"></script> -->   
 
         <script type="text/javascript" src="karelCorner.js"></script>
@@ -23,20 +24,26 @@
         <script type="text/javascript" src="karelWorld.js"></script>
         <script type="text/javascript" src="karelRobotDrawer.js"></script>
         <script type="text/javascript" src="karelUI.js"></script>
-        <script type="text/javascript" src="karel.js"></script>
         <script type="text/javascript" src="karel-i18n.en.js"></script>
         <script type="text/javascript" src="karel-i18n.sr-Cyrl.js"></script>        
 
         <script src="codemirror.js"></script>
         <script src="skulpt.min.js"></script>
         <script src="skulpt-stdlib.js"></script>
+
         <link rel="stylesheet" type="text/css" href="karel.css" />
         <link rel="stylesheet" type="text/css" href="codemirror.css" />
+        <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <style>
             .karel_section{
                 height: 200px;
                 width: 780px;
                 margin: auto 0;
+            }
+            body{
+                margin: 0 auto;
+                width: 780px;
             }
         </style>
     <script type="text/javascript">
@@ -61,15 +68,15 @@
     </head>
     <body>
         
-        <div id="blocklyDiv" style="height: 480px; width: 600px;"></div>
+        <div id="blocklyDiv" style="height: 500px; width: 780px;"></div>
         <div data-childcomponent="Карел_на_поље_33" class="karel_section course-box course-box-problem">
             <div class="course-content">
                 <p>
         
             <div data-component="karel" id="Карел_на_поље_33" class="karel_section">
-                <div class="karel_actions col-md-12 mb-2"><button class="btn btn-success run-button">Покрени програм</button>
-                <button class="btn btn-default reset-button">Врати на почетак</button>
-                <button class="btn btn-default blockly-button" style="display: none;">Blockly</button></div>
+                    <div class="karel_actions col-md-12 mb-2"><button class="btn btn-success run-button">Покрени програм</button>
+                    <button class="btn btn-default reset-button">Врати на почетак</button>
+                    </div>
                 <div style="overflow: hidden;" class="karel_actions col-md-12" >
                     <section class="col-md-12">
                         <article> 
